--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<head>
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+</head>
 <header>
   <a routerLink="cadastros">Cadastros</a>
   <a routerLink="novo-cadastro" routerLinkActive="ativo">Novo Cadastro</a>
